RESOLVED FIXED95616
[WK2] WebProcesses should not wait 60 seconds to close in multi-process mode
https://bugs.webkit.org/show_bug.cgi?id=95616
Summary [WK2] WebProcesses should not wait 60 seconds to close in multi-process mode
Alexey Proskuryakov
Reported 2012-08-31 15:44:21 PDT
Patch forthcoming.
Attachments
proposed patch (10.95 KB, patch)
2012-08-31 15:52 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2012-08-31 15:52:47 PDT
Created attachment 161786 [details] proposed patch
Darin Adler
Comment 2 2012-08-31 16:00:49 PDT
Comment on attachment 161786 [details] proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=161786&action=review r=me assuming you fix the bool/double thing > Source/WebKit2/Shared/Plugins/PluginProcessCreationParameters.h:53 > + bool terminationTimeout; This needs to be double, right? > Source/WebKit2/UIProcess/WebContext.cpp:89 > +static const double sharedSecondaryProcessShutdownTimeout = 60; Add a comment about why 60 seconds is a good value? > Source/WebKit2/UIProcess/Plugins/PluginProcessProxy.cpp:50 > +static const double shutdownTimeout = 15; Add a comment about why 15 seconds is a good value?
Alexey Proskuryakov
Comment 3 2012-08-31 16:21:14 PDT
> Add a comment about why 60 seconds is a good value? That's just moved code, I have no insight into how these values were chosen originally, or why they are different.
Alexey Proskuryakov
Comment 4 2012-08-31 16:27:41 PDT
Committed <http://trac.webkit.org/changeset/127334>. Great catch with the bool!
Note You need to log in before you can comment on or make changes to this bug.