third_party/WebKit/Source/WebKit2/Shared/Plugins/PluginProcessCreationParameters.h
@@ -51,6 +51,8 @@ struct PluginProcessCreationParameters {
     String pluginPath;
     bool supportsAsynchronousPluginInitialization;
 
+    double terminationTimeout;
+
 #if PLATFORM(MAC)
     String parentProcessName;
     CoreIPC::MachPort acceleratedCompositingPort;
